--- a/netlify.toml
+++ b/netlify.toml
@@ -5,5 +5,10 @@
 [[plugins]]
   package = "@netlify/plugin-nextjs"
 
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
+
 [build.environment]
   NEXT_USE_NETLIFY_EDGE = "true" 
